[list]
  [*] Fixed some UI issues with Push - Defense mode
[/list]