@@ -6,7 +6,7 @@ Immediately jump into random infantry skirmish on random place on the map. You c
   [*] Compatible with [b]any mod[/b] that has proper units definitions
   [*] Fully customizable, set your own rules, select your gear, pick location, pick factions
   [*] 3 game modes: [b]Push[/b], [b]King of the Hill[/b] and [b]Team Deathmatch[/b]
-  [*] Supports [b]Singleplayer[/b] and [b]COOP[/b] (up to 8 players)
+  [*] Supports [b]Singleplayer[/b], [b]COOP[/b] and [b]PvP[/b] (up to 8 players per side)
 [/list]
 
 [h1]Game modes[/h1]
@@ -17,11 +17,12 @@ Immediately jump into random infantry skirmish on random place on the map. You c
 [/list]
 
 [h2]Latest update[/h2]
-[h3]2023-02-26[/h3]
+[h3]2024-01-22[/h3]
 [list]
-  [*] New game modes: Push - Defense and Defense
-  [*] Tons of new maps
-  [*] Added more UI options
+  [*] Improved UI, better (squad-based) spawn system
+  [*] Configuration can now be changed ingame, tons of new configuration options
+  [*] New supports, possibility to buy AI vehicle support
+  [*] Bugfixes for MP, PvP added
 [/list]
 
 [h2]No support dedicated servers[/h2]
