@@ -1,3 +1,6 @@
 [list]
-  [*] Fixed some UI issues with Push - Defense mode
+  [*] Improved UI, better (squad-based) spawn system
+  [*] Configuration can now be changed ingame, tons of new configuration options
+  [*] New supports, possibility to buy AI vehicle support
+  [*] Bugfixes for MP, PvP added
 [/list]
